# Qlab

./: .gitattributes  .gitignore  .gitmodules  NOTICE  README.md  index.html  installQlab.m  params.json
analysis/: KT_estimation.m  bgsubtract.m  bgsubtractImage.m  bgsubtractphase.m  bgsubtractphaseslope.m  loadData.m  load_data.m  rho2pauli.m  rho2real.m  transposeImage.m
analysis/Batches/: loadT1.m
analysis/Resonator_fitting/: FitResonance8720TOnew.m  Hanger.m  Lorentzian.m  ResChiSqr.m  circfit.m  fitHanger.m  fitLorentzian.m  fit_biased_lorentzian.m  fit_resonance_circle.m  moving_average.m  parseDataFile_TO.m  parse_ExpcfgFile_TO.m  readme.txt  skewedLorentzian.m  su_resonators.m  su_resonators_export.m  su_resonators_fit.m  su_resonators_plot.m
analysis/cQED_dataAnalysis/: AllXYPlot.m  AllXYlabel.m  BetaExtract.m  CR_tomography.m  Choi2Chi_.m  Choi2Liouville_.m  Choi2PauliMap_.m  Concurrence_.m  ExpProcessTomo.py  GateSet1Q_.m  GateSet2Q_.m  LPN.m  MeasMat2PauliMap_.m  Pauli2Rho_.m  PauliLabel.m  PauliMap2Choi_.m  PauliOperators_.m  PauliTomo.m  Psi2Rho_.m  QPT_LSQ.m  QPT_SDP.m  QPT_SDP_Var.m  QST_LSQ.m  QST_SDP.m  QST_SDP_uncorrelated.m  QTomo.py  SDPTomoMeasMat_.m  SDP_QPT_.m  SDP_state_tomography.m  SimpleSDPTomoMeasMat_.m  Unitary2Choi_.m  WizardTomo_.m  analyfast.m  analyzeCalCR.m  analyzeProcess.m  analyzeProcessTomo.m  analyzeRB.m  analyzeRBT.m  analyzeRBT_stark_shift.m  analyzeRBTdecays.m  (+61 more)
common/: ExpScripter2.m  InstrumentFactory.m  SweepFactory.m
common/+MeasFilters/: Correlator.m  DigitalDemod.m  DigitalHomodyne.m  DigitalHomodyneSS.m  KernelIntegration.m  MeasFilter.m  RawStream.m  SingleShot.m  StateComparator.m  StreamSelector.m  create_butter_table.py  create_filter_table.py  digitalDemod.m  dotFirstDim.c  dotFirstDim.mexw64  polyDecimator.c  polyDecimator.m  polyDecimator.mexw32  polyDecimator.mexw64
common/+deviceDrivers/: Agilent33220A.m  Agilent53131A.m  AgilentE3631A.m  AgilentE8363C.m  AgilentN5183A.m  AgilentN9020A.m  BNC845.m  CoolLog_20190805_180754.mat  CoolLog_20190805_180851.mat  CryoCon22.m  DCBias.m  DigitalAttenuator.m  HP8153A.m  HP8340B.m  HP83623A.m  HP8673B.m  Keithley195A.m  Keithley197.m  Keithley220.m  Keithley2400.m  Keithly2400.m  KepcoBOP.m  Keysight34410A.m  Labbrick64.m  Lakeshore335.m  Lakeshore370.m  Picosec10070A.m  SR7124.m  SRS830.m  SRS865.m  Tek5014.m  TekAFG3102.m  YokoGS200.m
common/+sweeps/: AWGChannel.m  AWGSequence.m  Attenuation.m  DC.m  Frequency.m  FrequencyX2.m  HeterodyneFrequency.m  Phase.m  Power.m  Repeat.m  SegmentNum.m  Sweep.m  Threshold.m
common/@ExpManager/: ExpManager.m  is_AWG.m  is_scope.m
common/@PulseCalibration/: APE.py  APEChannelSequence.m  CRCal.py  CRCalSequence.m  DRAGCal.py  DRAGCalSequence.m  PhaseEstimation.m  PhaseEstimationSequence.m  PhaseEstimationSequence.py  PhaseEstimationSequence2q.m  PhaseEstimationSequence2q.py  Pi2Cal.py  Pi2CalChannelSequence.m  PiCal.py  PiCalChannelSequence.m  PulseCalibration.m  PulseCalibrationDo.m  PulsePhaseEstimate.m  PulsePhaseEstimate.py  RabiAmp.py  RamseyChannelSequence.m  RamseySequence.py  RepPulseCostFunction.m  SPAM.py  SPAMChannelSequence.m  analyzeRabiAmp.m  analyzeSlopes.m  fit_DRAG_cal.m  loadSequence.m  measure_rotation_angle.m  optimize_amplitude.m  pi2ObjectiveFunction.m  piObjectiveFunction.m  rabiAmpChannelSequence.m
common/@SingleShotFidelity/: SingleShotFidelity.m  SingleShotFidelityDo.m  SingleShotSequence.m  SingleShotSequence.py
common/doc/: qlabSoftwareDesignDoc.doc
common/util/: DataNamer.m  Fig2Plone.m  Fig2Plone.py  UpdateWfLib.m  UpdateWfLib.py  fftScope.m  fminsearchbnd.m  myhilbert.m  nsdims.m  parseargs.m  read_records.m  simpleTekUpload.m  stack.m  struct_filter.m  switch_marker_state.m  updateAmpPhase.m  updateAmpPhase.py  updateLengthPhase.m  updateLengthPhaseParams.py  updateNumSegments.m  updateNumSegments.py  updateQubitFreq.m  updateQubitFreq.py  updateQubitPulseParams.m  updateQubitPulseParams.py  update_wf_lib.m  update_wf_lib.py  xticklabel_rotate.m
experiments/GST/: pauli_frame_update.m  pauli_frame_update.py  random_update_Z.m  random_update_Z.py  (+1 more)
hardware/APS/libaps2-cpp/src/: CMakeLists.txt
hardware/APS/libaps2-cpp/src/APS/: APS.cpp  APS.h  APS2.cpp  APS2.h  APSEthernet.cpp  APSEthernet.h  APSEthernetPacket.cpp  APSEthernetPacket.h  APSRack.cpp  APSRack.h  BankBouncerThread.h  Channel.cpp  Channel.h  DummyAPS.cpp  DummyAPS.h  EthernetControl.cpp  EthernetControl.h  FPGA.cpp  FPGA.h  LLBank.h  MACAddr.cpp  MACAddr.h  concol.h  constants.h  headings.h  libaps.cpp  libaps.h  logger.h
hardware/APS/libaps2-cpp/src/test/: aps2_dissectors.lua  createLLmem.jl  echo.cpp  flash.cpp  main.cpp  program.cpp  reset.cpp  waveforms.cpp
hardware/APS/libx6-cpp/src/: CMakeLists.txt
hardware/APS/libx6-cpp/src/APS/: APS.cpp  APS.h  APSRack.cpp  APSRack.h  Channel.cpp  Channel.h  FPGA.h  X6_1000.cpp  X6_1000.h  constants.h  headings.h  libaps.cpp  libaps.h
hardware/APS/libx6-cpp/src/innovative/: ApplicationIo.cpp  ApplicationIo.h  CommandLine_Con.h  ModuleIo.cpp  ModuleIo.h  StaticWaveform_App.cpp  Thunker.cpp  TriggerManager_App.h
hardware/APS/libx6-cpp/src/test/: APS.m  X6.m  libx6.m  main.cpp  main2.cpp
hardware/APS2/libaps2-cpp/src/: CMakeLists.txt
hardware/APS2/libaps2-cpp/src/APS/: APS2.cpp  APS2.h  APSEthernet.h  Channel.cpp  Channel.h  DummyAPS.cpp  DummyAPS.h  EthernetControl.cpp  LLBank.cpp  MACAddr.cpp  MACAddr.h  constants.h  headings.h  libaps.cpp  libaps.h  logger.h
hardware/APS2/libaps2-cpp/src/test/: createLLmem.jl  echo.cpp  flash.cpp  main.cpp  program.cpp  reset.cpp  start_wireshark.sh  waveforms.cpp
hardware/X6-1000M/src/: CMakeLists.txt  X6.cpp  X6.h  X6_1000.cpp  X6_1000.h  constants.h  headings.h  libx6adc.cpp  libx6adc.h
hardware/X6-1000M/src/X6ADC/: FPGA.cpp  FPGA.h  X6.cpp  X6.h  X6Rack.cpp  X6Rack.h  X6_1000.cpp  X6_1000.h  constants.h  headings.h  libx6adc.cpp  libx6adc.h  logger.h
hardware/X6-1000M/src/innovative/: CommandLine_Con.cpp  StaticWaveform_App.h  Thunker_Con.cpp  Thunker_Con.h  TriggerManager_App.cpp
hardware/X6-1000M/src/test/: X6.m  main.cpp
(+735 files in other folders)
